# llm-benchmark

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
ADRs/: 0001-adrs.md  (+2 more)
benchmarks/social-bias/: README.md  pyproject.toml
benchmarks/social-bias/generate-prompts/: Template.py  prompts.py
benchmarks/social-bias/generate-prompts/experiments_data/data/: namen.xlsx
benchmarks/social-bias/generate-prompts/experiments_data/data/beroepen/: first_name.xlsx  gender_origin.xlsx
benchmarks/social-bias/generate-prompts/experiments_data/prompts/: empty_dataframe.xlsx
benchmarks/social-bias/generate-prompts/experiments_data/templates/first_name/accept_reject/neutral_v1/: base.txt  linebreak.txt  placeholder.txt
benchmarks/social-bias/generate-prompts/experiments_data/templates/first_name/accept_reject/neutral_v2/: base.txt  linebreak.txt  placeholder.txt
benchmarks/social-bias/generate-prompts/experiments_data/templates/first_name/yes_no/neutral_v1/: base.txt  linebreak.txt  placeholder.txt
benchmarks/social-bias/generate-prompts/experiments_data/templates/first_name/yes_no/neutral_v2/: base.txt  linebreak.txt  placeholder.txt
benchmarks/social-bias/generate-prompts/experiments_data/templates/gender_origin/accept_reject/neutral_v1/: base.txt  linebreak.txt  placeholder.txt
benchmarks/social-bias/generate-prompts/experiments_data/templates/gender_origin/accept_reject/neutral_v2/: base.txt  linebreak.txt  placeholder.txt
benchmarks/social-bias/run-experiments/: experiments_claude.py  experiments_gpt.py  experiments_huggingface.py
(+17 files in other folders)
