[project]
name = "social-bias"
version = "0.1.0"
description = "Social Bias Benchmark"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "anthropic>=0.50.0",
    "langchain>=0.3.24",
    "openai>=1.76.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
